stitch/src/snapshots/stitch__parser__tests__placeholder_in_call_becomes_a_lambda.snap
---
source: stitch/src/parser.rs
expression: "p(\"map($ * 2)\")"
---
Call {
    callee: Var(
        "map",
    ),
    args: [
        Arg {
            label: None,
            value: Binary {
                op: Mul,
                left: Placeholder(
                    None,
                ),
                right: Int(
                    2,
                ),
            },
        },
    ],
}
