stitch/src/snapshots/stitch__parser__tests__placeholder_with_field_access.snap
---
source: stitch/src/parser.rs
expression: "p(\"map($.celsius)\")"
---
Call {
    callee: Var(
        "map",
    ),
    args: [
        Lambda {
            params: [
                "$a",
            ],
            body: Field {
                object: Var(
                    "$a",
                ),
                name: "celsius",
            },
        },
    ],
}
