stitch/src/snapshots/stitch__parser__tests__placeholder_wraps_only_its_own_argument.snap
---
source: stitch/src/parser.rs
expression: "p(\"f($ > 30, other)\")"
---
Call {
    callee: Var(
        "f",
    ),
    args: [
        Arg {
            label: None,
            value: Lambda {
                params: [
                    "$a",
                ],
                body: Binary {
                    op: Gt,
                    left: Var(
                        "$a",
                    ),
                    right: Int(
                        30,
                    ),
                },
            },
        },
        Arg {
            label: None,
            value: Var(
                "other",
            ),
        },
    ],
}
