stitch/src/snapshots/stitch__parser__tests__postfix_binds_tighter_than_unary.snap
---
source: stitch/src/parser.rs
expression: "p(\"-f(x)\")"
---
Unary {
    op: Neg,
    operand: Call {
        callee: Var(
            "f",
        ),
        args: [
            Arg {
                label: None,
                value: Var(
                    "x",
                ),
            },
        ],
    },
}
