stitch/src/snapshots/stitch__parser__tests__ranges_do_not_chain.snap
---
source: stitch/src/parser.rs
expression: "parse(\"1..2..3\")"
---
Err(
    ParseError {
        message: "ranges don't chain — `a..b..c` is ambiguous; use a single range",
        span: Span {
            start: 4,
            end: 6,
        },
        entry: Expr,
    },
)
