stitch/src/snapshots/stitch__parser__tests__repeated_dollar_is_arity_one.snap
---
source: stitch/src/parser.rs
expression: "p(\"map($ * $)\")"
---
Call {
    callee: Var(
        "map",
    ),
    args: [
        Lambda {
            params: [
                "$a",
            ],
            body: Binary {
                op: Mul,
                left: Var(
                    "$a",
                ),
                right: Var(
                    "$a",
                ),
            },
        },
    ],
}
