stitch/src/snapshots/stitch__parser__tests__single_element_tuple_needs_trailing_comma.snap
---
source: stitch/src/parser.rs
expression: "p(\"(a,)\")"
---
Tuple(
    [
        Var(
            "a",
        ),
    ],
)
