stitch/src/snapshots/stitch__parser__tests__string_works_as_map_key.snap
---
source: stitch/src/parser.rs
expression: "p(r#\"[\"host\": 1]\"#)"
---
Map(
    [
        (
            Str(
                [
                    Lit(
                        "host",
                    ),
                ],
            ),
            Int(
                1,
            ),
        ),
    ],
)
