stitch/src/snapshots/stitch__parser__tests__subjectless_match_rejects_arms_after_catch_all.snap
---
source: stitch/src/parser.rs
expression: "parse(\"match { _ => 0  x > 0 => 1 }\")"
---
Err(
    ParseError {
        message: "a `_ => …` catch-all must be the last arm of a subjectless match",
        span: Span {
            start: 16,
            end: 17,
        },
        entry: Expr,
    },
)
