stitch/src/snapshots/stitch__parser__tests__subjectless_match_requires_a_catch_all.snap
---
source: stitch/src/parser.rs
expression: "parse(r#\"match { x > 0 => \"pos\" }\"#)"
---
Err(
    ParseError {
        message: "a subjectless `match` must end in a `_ => …` catch-all",
        span: Span {
            start: 23,
            end: 24,
        },
        entry: Expr,
    },
)
