stitch/src/snapshots/stitch__parser__tests__subjectless_match_with_only_catch_all_is_the_default.snap
---
source: stitch/src/parser.rs
expression: "p(\"match { _ => 0 }\")"
---
SubjectlessMatch {
    arms: [],
    default: Int(
        0,
    ),
}
