stitch/src/snapshots/stitch__parser__tests__trailing_tokens_are_an_error.snap
---
source: stitch/src/parser.rs
expression: "parse(\"1 2\")"
---
Err(
    ParseError {
        message: "expected end of input",
        span: Span {
            start: 2,
            end: 3,
        },
        entry: Expr,
    },
)
